--- a/authentification.html
+++ b/authentification.html
@@ -22,10 +22,10 @@
                 <nav>
                     <ul id="menuItems">
                         <li><a href="index.html">Acceuil</a></li>
-                        <li><a href="products.html">Produits</a></li>
+                        <li><a href="produits.html">Produits</a></li>
                         <li><a href="">Apropos</a></li>
                         <li><a href="">Contact</a></li>
-                        <li><a href="account.html">Account</a></li>
+                        <li><a href="authentification.html">Account</a></li>
                     </ul>
                 </nav>
                 <a href=""><img src="images/cart.png" alt="cart icon" width="30px" height="30px"></a>
